[package]
name = "coderag"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "testfast"
path = "src/main.rs"

[dependencies]
clap={version="4", features=["derive"]}
dotenvy="0.15"
reqwest={version="0.12", features=["blocking", "json"]}
serde={version="1", features=["derive"]}
serde_json="1"
sha2="0.10"
tree-sitter="0.22"
tree-sitter-python="0.21"

tiktoken-rs="0.5"

tokio={version="1.0", features=["full"]}
anyhow="1.0"
