[package]
name = "testfast"
version = "1.1.1"
edition = "2024"
description = "Automated test suite generator for FastAPI (Python) web applications"
license = "MIT"
repository = "https://github.com/codeCrack-01/testfast"

[dependencies]
clap={version="4", features=["derive"]}
dotenvy="0.15"
reqwest={version="0.12", features=["blocking", "json"]}
serde={version="1", features=["derive"]}
serde_json="1"
sha2="0.10"
tree-sitter="0.22"
tree-sitter-python="0.21"

tiktoken-rs="0.5"

tokio={version="1.0", features=["full"]}
anyhow="1.0"
